--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@ function takePhoto() {
 			ok = res.ok;
 				email = res.email;
 				mycard = res.mycard;
-			if (ok == 1) {  
+				alert(ok);
+	     if (ok == 1) {  
 			alert(email);
 		
 		      localStorage.login="true";
