--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@ function takePhoto() {
 			{
 			localStorage.login="true";
 			localStorage.email=email;
-			window.location.href = "index.html";
+			alert("ciao");
+			//window.location.href = "index.html";
 			}
 			else if(ok=0)
 			{
