--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ function takePhoto() {
 		success: function(res){
 			ok = res.result;
 				email = res.email;
+				alert(ok);
 			if(ok==1)
 			{
 			localStorage.login="true";
