--- a/login.html
+++ b/login.html
@@ -151,6 +151,7 @@
     <div id='takePhoto'></div>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
  
     <script>
@@ -316,8 +317,9 @@ function takePhoto() {
     <script type="text/javascript">
         app.initialize();
     </script>
-    
+    <script src="http://my.ydmalls.com/js/jquery-2.2.1.min.js"></script>
     <script>
+	
 	$("#login").click(function(){
 		var email=$("#email").val();
 		var password=$("#password").val();
