--- a/login.html
+++ b/login.html
@@ -330,7 +330,7 @@ function takePhoto() {
 		alert("prova");
 		//if($.trim(email).length>0 & $.trim(password).length>0)
 		//{
-		$.ajax({
+		/*$.ajax({
 		type: "POST",
 		dataType: 'json',
 		url: url,
@@ -359,7 +359,7 @@ function takePhoto() {
 			$("#login").html('Login');
 			}
 			}
-			});
+			}); */
 			//}return false;
 		});
 	
