--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
  <script type="text/javascript" src="js/index.js"></script>
-  <script src="http://my.ydmalls.com/js/jquery-2.2.1.min.js"></script>
+  <script src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" charset="utf-8">
     var pictureSource;   // picture source
     var destinationType; // sets the format of returned value 
