--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <p class="event received">Device is Ready</p>
             <p onclick='takePhoto()'>START PIC</p>
             <a href="login.html">LOGIN</a>
+            <br><button onclick="opennow('http://bedesk.biz/app/back.php');">Open inAPP</button> <br>
             <button onclick="capturePhotoWithData();">Capture Photo With Image Data</button> <br>
     <button onclick="capturePhotoWithFile();">Capture Photo With Image File URI</button> <br>
     <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
