--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <p class="event received">Device is Ready</p>
             <p onclick='takePhoto()'>START PIC</p>
             <a href="login.html">LOGIN</a>
-            <br><button onclick="opennow('http://bedesk.biz/app/back.php');">Open inAPP</button> <br>
+            <br><button onclick="openInAppBrowser('http://bedesk.biz/app/back.php');">Open inAPP</button> <br>
             <button onclick="capturePhotoWithData();">Capture Photo With Image Data</button> <br>
     <button onclick="capturePhotoWithFile();">Capture Photo With Image File URI</button> <br>
     <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
@@ -378,6 +378,28 @@ function takePhoto() {
 			});
 			}return false;
 		});
+	
+	</script>
+    
+    <script>
+	var InAppBrowserReference;
+
+function wlCommonInit(){
+
+}
+
+function openInAppBrowser(linknow) {
+    // Use location=no,toolbar=no in order to hide the supplied 'close' buttons
+    // by the InAppBrowser instance.
+    InAppBrowserReference = window.open(linknow, '_blank', 'location=no,toolbar=no');
+    InAppBrowserReference.addEventListener('loaderror', closeInAppBrowser);
+}
+
+function closeInAppBrowser(event) {
+    if (event.url.match("/close")) {
+        InAppBrowserReference.close();
+    }
+}
 	
 	</script>
 </body>
